--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/Documents/Career/My Projects/Selenium Projects/01-Introduction-Project/commons-io-2.17.0/commons-io-2.17.0.jar"/>
+	<classpathentry kind="lib" path="D:/Documents/Career/My Projects/Selenium Projects/01-Introduction-Project/commons-io-2.17.0/commons-io-2.17.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Documents/Career/My Projects/Selenium Projects/01-Introduction-Project/commons-io-2.17.0/commons-io-2.17.0-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Documents/Career/My Projects/Selenium Projects/01-Introduction-Project/commons-io-2.17.0/commons-io-2.17.0-tests.jar"/>
+	<classpathentry kind="lib" path="D:/Documents/Career/My Projects/Selenium Projects/01-Introduction-Project/commons-io-2.17.0/commons-io-2.17.0-test-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
